k8s-namespace-onboarding/generated/payments-staging/05-network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  labels:
    app.kubernetes.io/managed-by: k8s-namespace-onboarding
    platform.example.com/team: payments
    platform.example.com/environment: staging
  namespace: payments-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  labels:
    app.kubernetes.io/managed-by: k8s-namespace-onboarding
    platform.example.com/team: payments
    platform.example.com/environment: staging
  namespace: payments-staging
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  labels:
    app.kubernetes.io/managed-by: k8s-namespace-onboarding
    platform.example.com/team: payments
    platform.example.com/environment: staging
  namespace: payments-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-namespaces
  labels:
    app.kubernetes.io/managed-by: k8s-namespace-onboarding
    platform.example.com/team: payments
    platform.example.com/environment: staging
  namespace: payments-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-namespaces
  labels:
    app.kubernetes.io/managed-by: k8s-namespace-onboarding
    platform.example.com/team: payments
    platform.example.com/environment: staging
  namespace: payments-staging
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: observability
